--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       content="Budu tu pro vás v jakékoliv situaci. Provedu vás světem financí a realit. Nezáleží na tom, zda chcete investovat nebo jste se rozhodli najít si první bydlení. Společně vše vyřešíme."
       name="description"
     />
+    <meta name="google-site-verification" content="haobS28o7NpIWfxHAqaZRcCbJ0j1fJa4yWGN6HuMo2c" />
     <meta content="GFS - Jan Syrový" property="og:title" />
     <meta
       content="Budu tu pro vás v jakékoliv situaci. Provedu vás světem financí a realit. Nezáleží na tom, zda chcete investovat nebo jste se rozhodli najít si první bydlení. Společně vše vyřešíme."
