--- a/index.html
+++ b/index.html
@@ -2161,7 +2161,7 @@
                 </div>
                 <div class="map w-embed w-iframe">
                   <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2552.8192915076347!2d15.869400376423245!3d50.22059727154914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470c2bcab5f6c26d%3A0xbc73b541e6f2661a!2sGFS%20Group%20s.r.o.!5e0!3m2!1scs!2sth!4v1710425766298!5m2!1scs!2sth"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d159.55115612194433!2d15.8718199!3d50.2206121!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470dd5496780a6e5%3A0x115e88d6c9092220!2sJan%20Syrov%C3%BD!5e0!3m2!1scs!2sth!4v1713267591245!5m2!1scs!2sth"
                     width="100%"
                     height="450"
                     style="border: 0"
