--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       content="Budu tu pro vás v jakékoliv situaci. Provedu vás světem financí a realit. Nezáleží na tom, zda chcete investovat nebo jste se rozhodli najít si první bydlení. Společně vše vyřešíme."
       name="description"
     />
-    <meta name="google-site-verification" content="haobS28o7NpIWfxHAqaZRcCbJ0j1fJa4yWGN6HuMo2c" />
     <meta content="Jan Syrový" property="og:title" />
     <meta
       content="Budu tu pro vás v jakékoliv situaci. Provedu vás světem financí a realit. Nezáleží na tom, zda chcete investovat nebo jste se rozhodli najít si první bydlení. Společně vše vyřešíme."
@@ -1294,23 +1293,26 @@
               <div class="reviews-slide w-slide">
                 <div>
                   <div class="text-block-small text-color-white">
-                    „S Honzou mám jenom dobré zkušenosti. Jeho profesionální
-                    přístup a znalosti finančního trhu mě opravdu nadchly.
-                    Dokázal mě poslouchat a porozumět mým finančním cílům, a
-                    následně mi vypracoval skvělý plán, jak efektivně spravovat
-                    a investovat své finance. Navíc mě příjemně překvapilo, jak
-                    rychle a ochotně reagoval na moje dotazy a jakékoliv změny v
-                    mém investičním plánu. Jednoznačně doporučuji jeho služby
-                    všem, kteří hledají seriózního a kompetentního finančního
-                    specialistu.&quot;
+                    „Pan Syrový se mi postaral o výhodnější přepojištění mých
+                    automobilů, pojištění domu i podnikání a po těchto
+                    příjemných zkušenostech jsem se rozhodl si od něj nechat
+                    zpracovat investice. Atmosféra schůzek se vždy vede v
+                    příjemném duchu a ač je pro mě finanční svět španělskou
+                    vesnicí, tak mi pan Syrový vždy vše polopatě vysvětlil a
+                    díky tomu jsem se mohl lépe rozhodnout. Co také oceňuji je,
+                    že se u jeho kanceláře v Hradci Králové dá v pohodě
+                    zaparkovat. Děkuji za službu a těším se na další
+                    spolupráci!&quot;
                   </div>
                   <div
                     class="display-flex-horizontal space-between-end-reverse"
                   >
                     <div class="review-author-info">
-                      <p class="font-weight-bold text-color-white">Hana</p>
+                      <p class="font-weight-bold text-color-white">
+                        Jakub Misík
+                      </p>
                       <p class="paragraph-regular text-color-white">
-                        Zdravotní sestra
+                        <!-- Zdravotní sestra -->
                       </p>
                     </div>
                     <div class="reviews-icons-wrapper">
@@ -1347,22 +1349,20 @@
               <div class="reviews-slide w-slide">
                 <div>
                   <div class="text-block-small text-color-white">
-                    „Hledala jsem kvalifikovaného finančního poradce, který mi
-                    pomůže s plánováním mého důchodu a investicemi. Naštěstí
-                    jsem narazila na pana Jana Syrového, a nemohla jsem být
-                    spokojenější. Pan Syrový má bohaté zkušenosti v oblasti
-                    financí. Dokázal mi vysvětlit složité finanční koncepty
-                    jednoduchým způsobem, což jsem velmi ocenila. Jeho služby
-                    jsou vynikající a já ho vřele doporučuji všem, kteří hledají
-                    kvalifikovaného finančního specialistu.&quot;
+                    „S Honzou spolupracujeme již několik let. Za ta léta jsme
+                    toho řešili spoustu, počínaje pojištěním auta, přes životní
+                    pojištění, hypotéku, koupi i prodej nemovitosti, vždy nabídl
+                    vhodná řešení k naší spokojenosti.&quot;
                   </div>
                   <div
                     class="display-flex-horizontal space-between-end-reverse"
                   >
                     <div class="review-author-info">
-                      <p class="font-weight-bold text-color-white">Petra</p>
+                      <p class="font-weight-bold text-color-white">
+                        David Pávek
+                      </p>
                       <p class="paragraph-regular text-color-white">
-                        Studentka VŠ
+                        <!-- Studentka VŠ -->
                       </p>
                     </div>
                     <div class="reviews-icons-wrapper">
@@ -1399,21 +1399,18 @@
               <div class="reviews-slide w-slide">
                 <div>
                   <div class="text-block-small text-color-white">
-                    „Jan Syrový je výborný finanční specialista, který mi pomohl
-                    s životní pojištěním. Měl jsem s ním příjemnou zkušenost a
-                    rád bych se s vámi podělil o své dojmy. Jan má dlouholeté
-                    znalosti v oblasti životního pojištění. Vysvětluje složité
-                    pojmy srozumitelně. Je přátelský a ochotný. Vyslechne vaše
-                    potřeby a navrhne vhodné řešení. Podrobně mi vysvětlil
-                    všechny aspekty životního pojištění. Byl upřímný ohledně
-                    výhod i omezení. To oceňuji. Všem doporučuji.&quot;
+                    „Výborná a profesionální komunikace. Nabídne vždy řešení na
+                    míru včetně individuálního přístupu, což v segmentu financí
+                    se vidí málo kdy. Doporučuju!&quot;
                   </div>
                   <div
                     class="display-flex-horizontal space-between-end-reverse"
                   >
                     <div class="review-author-info">
                       <p class="font-weight-bold text-color-white">Aleš</p>
-                      <p class="paragraph-regular text-color-white">Manager</p>
+                      <p class="paragraph-regular text-color-white">
+                        <!-- Manager -->
+                      </p>
                     </div>
                     <div class="reviews-icons-wrapper">
                       <img
@@ -2161,7 +2158,7 @@
                 </div>
                 <div class="map w-embed w-iframe">
                   <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d159.55115612194433!2d15.8718199!3d50.2206121!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470dd5496780a6e5%3A0x115e88d6c9092220!2sJan%20Syrov%C3%BD!5e0!3m2!1scs!2sth!4v1713267591245!5m2!1scs!2sth"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2552.8192915076347!2d15.869400376423245!3d50.22059727154914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470c2bcab5f6c26d%3A0xbc73b541e6f2661a!2sGFS%20Group%20s.r.o.!5e0!3m2!1scs!2sth!4v1710425766298!5m2!1scs!2sth"
                     width="100%"
                     height="450"
                     style="border: 0"
