--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       content="Budu tu pro vás v jakékoliv situaci. Provedu vás světem financí a realit. Nezáleží na tom, zda chcete investovat nebo jste se rozhodli najít si první bydlení. Společně vše vyřešíme."
       property="og:description"
     />
+    <meta http-equiv="refresh" content="0; url=https://syrovyjan.cz">
     <meta content="Jan Syrový" property="twitter:title" />
     <meta
       content="Budu tu pro vás v jakékoliv situaci. Provedu vás světem financí a realit. Nezáleží na tom, zda chcete investovat nebo jste se rozhodli najít si první bydlení. Společně vše vyřešíme."
